# rank-pictures

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: application.hpp  base_menu.hpp  data_handler.hpp  main_menu.hpp  menu_events.hpp  picture_record.hpp  rank_menu.hpp  screen.hpp  transition_state.hpp
src/: application.cpp  base_menu.cpp  data_handler.cpp  main.cpp  main_menu.cpp  rank_menu.cpp  screen.cpp
